# Fabcon2026

./: .gitignore  2026-03-18.md  LICENSE.md  base1.base  canvas1.canvas
.github/: copilot-instructions.md
.obsidian/: workspace.json
Processed/: sessions_in_preprocessed.csv
Scripts/: get_pkg_links.py
Sessions/: AI Agents Power Platform and SQL for Next Gen Automation.md  AI in Action - Microsoft Fabric for Data Science.md  AI-Driven MDM on Microsoft Fabric - Build the Intelligent Golden Record.md  AI-Powered CI-CD for Microsoft Fabric - Building Enterprise-Grade Pipelines with GitHub Copilot.md  Accelerate Data Transformation with Dataflows Gen2 in Microsoft Fabric.md  Accelerate Your Move to Microsoft Fabric- Key Steps, Common Pitfalls, and Best Practices.md  Adapting to Fabric Spark- A SQL Server Practitioner’s Path Forward.md  Agentic Copilot in Fabric Notebooks.md  Agentic way to maximize your Fabric capacity utilization.md  An inside look at how Microsoft builds SQL features.md  Architecting Intelligence - What Powers SQL Copilots.md  Architecting Zero ETL- Real-Time Analytics from Azure Database for PostgreSQL using Fabric Mirroring.md  Automate at Scale with Event-Driven Architectures and Business Events.md
Speakers/: Aaron Merrill.md  Aaron Saidi.md  Abhishek Narain.md  Adam Lash.md  Adi Regev.md  Aditya Badramraju.md  Ajay Gollapalli.md  Ajay Jagannathan.md  Ajay Kavuri.md  Ajay Punyapu.md  Ajeta Singhal.md  Aleksi Partanen.md  Alex Carvalho.md  Alex Rostan.md  Alexandra Savelieva.md  Alicia Li.md  Allan Hirt.md  Alon Baram.md  Alp Akdeniz.md  Amir Jafari.md  Amir Netz.md  Amir Sarir.md  Anavi Nahar.md  Andre Terceros.md  Andy Parkerson.md  Anita Ambalavanan.md  Anitha Adusumilli.md  Anna Gebler.md  Anna Hoffman.md  Anthony Nocentino.md  Anton Fritz.md  Anu Venkataraman.md  Anupama Natarajan.md  Armando Lacerda.md  Arsalan Yarveisi.md  Arun Ulag.md  (+43 more)
src/eda/: README.md  main.py  pyproject.toml
src/eda/eda/: __init__.py  main.py
src/eda/eda/commands/: classify.py  cluster.py  model_select.py  preprocess.py  reduce.py
src/eda/eda/data/: __init__.py  loader.py  schema.py
src/eda/eda/utils/: __init__.py  io.py  plotting.py
src/viz/: README.md  pyproject.toml
src/viz/viz/: __init__.py  api.py  dashboard.py
(+256 files in other folders)
