[project]
name = "viz"
version = "0.1.0"
description = "FabCon 2026 session analysis dashboard (FastAPI + Streamlit)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "pyarrow>=13.0.0",
    "scikit-learn>=1.6.0",
    "joblib>=1.4.0",
    "python-frontmatter>=1.1.0",
    "scipy>=1.14.1",
]

[project.scripts]
viz-api = "viz.api:start"
viz-dashboard = "viz.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["viz"]
